--- a/css/base.css
+++ b/css/base.css
@@ -9,6 +9,8 @@ html {
   overflow-x: hidden;
   width: 100%;
   max-width: 100%;
+  scroll-behavior: smooth;
+  scroll-padding-top: 90px; /* Optimální offset pro fixed header */
 }
 
 body {
