--- a/css/base.css
+++ b/css/base.css
@@ -49,12 +49,12 @@ a {
 body::before {
   content: '';
   position: absolute;
-  top: 100vh; /* Start after mockups carousel (100vh) */
+  top: 0; /* Start from the very beginning */
   left: 0;
   right: 0;
   width: 100%;
   max-width: 100%;
-  height: 710vh; /* Large height */
+  height: 1000vh; /* Much larger height to cover entire page */
   background-image: url('../icons/background-line.svg');
   background-repeat: no-repeat;
   background-position: top center;
@@ -64,12 +64,11 @@ body::before {
   overflow: hidden;
   mask-image: linear-gradient(to bottom,
     transparent 0%,
-    rgba(0, 0, 0, 0.05) 1%,
-    rgba(0, 0, 0, 0.15) 2%,
+    transparent 1%,
+    rgba(0, 0, 0, 0.1) 2%,
     rgba(0, 0, 0, 0.3) 3%,
-    rgba(0, 0, 0, 0.5) 4%,
-    rgba(0, 0, 0, 0.7) 5%,
-    black 8%,
+    rgba(0, 0, 0, 0.6) 4%,
+    black 6%,
     black 85%,
     rgba(0, 0, 0, 0.9) 88%,
     rgba(0, 0, 0, 0.7) 91%,
@@ -80,12 +79,11 @@ body::before {
     transparent 100%);
   -webkit-mask-image: linear-gradient(to bottom,
     transparent 0%,
-    rgba(0, 0, 0, 0.05) 1%,
-    rgba(0, 0, 0, 0.15) 2%,
+    transparent 1%,
+    rgba(0, 0, 0, 0.1) 2%,
     rgba(0, 0, 0, 0.3) 3%,
-    rgba(0, 0, 0, 0.5) 4%,
-    rgba(0, 0, 0, 0.7) 5%,
-    black 8%,
+    rgba(0, 0, 0, 0.6) 4%,
+    black 6%,
     black 85%,
     rgba(0, 0, 0, 0.9) 88%,
     rgba(0, 0, 0, 0.7) 91%,
