Add language switcher with EN/CZ support
Introduces a language switcher component for both desktop and mobile, including new CSS and JavaScript for toggling between English and Czech. Updates index.html to add language switcher UI and data-translate attributes for translatable text. Also adjusts the background mask gradient in styles.css for improved appearance.

--- a/css/main.css
+++ b/css/main.css
@@ -13,3 +13,4 @@
 @import url('components/occasion-cards.css');
 @import url('components/join-us.css');
 @import url('components/footer.css');
+@import url('components/language-switcher.css');
