--- a/css/main.css
+++ b/css/main.css
@@ -14,3 +14,4 @@
 @import url('components/join-us.css');
 @import url('components/footer.css');
 @import url('components/language-switcher.css');
+@import url('components/theme-switcher.css');
